ui_tests/where_bounds_3.stderr
error: expected ;
  ┌─ main.box:6:1
  │
6 │ where {}
  │ ^^^^^ found where

