ui_tests/where_bounds_3.box
mod bar {
    type Baz {}
}

use bar::Baz
where {}